FIXED: Redis must be under `redis:`, not `databases:`

--- a/render.yaml
+++ b/render.yaml
@@ -49,7 +49,7 @@ services:
         sync: false
 
 # Redis Instance
-databases:
+redis:
   - name: pulsepress-redis
     plan: free
     region: oregon
