--- a/render.yaml
+++ b/render.yaml
@@ -15,10 +15,8 @@ services:
       - key: DATABASE_URL
         sync: false
       - key: REDIS_URL
-        fromService:
-          type: redis
-          name: pulsepress-redis
-          property: connectionString
+        value: redis://red-d4pbjqur433s73ejpkc0:6379
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_REFRESH_SECRET
@@ -41,15 +39,7 @@ services:
       - key: DATABASE_URL
         sync: false
       - key: REDIS_URL
-        fromService:
-          type: redis
-          name: pulsepress-redis
-          property: connectionString
+        value: redis://red-d4pbjqur433s73ejpkc0:6379
+        sync: false
       - key: HUGGINGFACE_API_KEY
         sync: false
-
-# Redis Instance
-redis:
-  - name: pulsepress-redis
-    plan: free
-    region: oregon
