--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pino-pretty": "^13.1.2",
     "redis": "^4.6.12",
     "rss-parser": "^3.13.0",
+    "sharp": "^0.34.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.6",
